// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should pass all props down to the inner input and merge classnames 1`] = `
<input
  autoComplete={undefined}
  className="a b c d e f g h i j k l m n o p q r"
  defaultValue={undefined}
  disabled={true}
  name="example"
  onBlur={undefined}
  onChange={[Function]}
  onFocus={undefined}
  onKeyDown={undefined}
  placeholder={undefined}
  type="number"
  value=""
/>
`;

exports[`should pass all props down to the inner input and merge classnames 2`] = `
"
.a {
  z-index: 0
}

.b {
  width: 100%
}

.c {
  height: 2.26667rem
}

.d {
  margin: 0 0 0.75rem
}

.e {
  padding: 0.45em 0.75em
}

.f {
  border: 1px solid #BCBEC0
}

.g {
  border-radius: 2px
}

.h {
  flex: initial;
  -webkit-flex: initial
}

.i {
  vertical-align: middle
}

.j {
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif
}

.k {
  font-size: 0.86667rem
}

.l {
  background: #fff
}

.m {
  color: #333333
}

.n {
  outline: none
}

.o {
  transition: border-color 0.2s ease;
  -webkit-transition: border-color 0.2s ease;
  -moz-transition: border-color 0.2s ease
}

.p {
  text-indent: initial
}

.q:hover {
  border-color: #2F7BBF
}

.r:focus {
  border-color: #2F7BBF
}
"
`;

exports[`should render 1`] = `
<input
  autoComplete={undefined}
  className="a b c d e f g h i j k l m n o p q r"
  defaultValue={undefined}
  disabled={undefined}
  name="example"
  onBlur={undefined}
  onChange={[Function]}
  onFocus={undefined}
  onKeyDown={undefined}
  placeholder={undefined}
  type="text"
  value="content"
/>
`;

exports[`should render 2`] = `
"
.a {
  z-index: 0
}

.b {
  width: 100%
}

.c {
  height: 2.26667rem
}

.d {
  margin: 0 0 0.75rem
}

.e {
  padding: 0.45em 0.75em
}

.f {
  border: 1px solid #BCBEC0
}

.g {
  border-radius: 2px
}

.h {
  flex: initial;
  -webkit-flex: initial
}

.i {
  vertical-align: middle
}

.j {
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif
}

.k {
  font-size: 0.86667rem
}

.l {
  background: #fff
}

.m {
  color: #333333
}

.n {
  outline: none
}

.o {
  transition: border-color 0.2s ease;
  -webkit-transition: border-color 0.2s ease;
  -moz-transition: border-color 0.2s ease
}

.p {
  text-indent: initial
}

.q:hover {
  border-color: #2F7BBF
}

.r:focus {
  border-color: #2F7BBF
}
"
`;

exports[`should render with autocomplete 1`] = `
<input
  autoComplete="off"
  className="a b c d e f g h i j k l m n o p q r"
  defaultValue={undefined}
  disabled={undefined}
  name="example"
  onBlur={undefined}
  onChange={[Function]}
  onFocus={undefined}
  onKeyDown={undefined}
  placeholder={undefined}
  type="text"
  value=""
/>
`;

exports[`should render with autocomplete 2`] = `
"
.a {
  z-index: 0
}

.b {
  width: 100%
}

.c {
  height: 2.26667rem
}

.d {
  margin: 0 0 0.75rem
}

.e {
  padding: 0.45em 0.75em
}

.f {
  border: 1px solid #BCBEC0
}

.g {
  border-radius: 2px
}

.h {
  flex: initial;
  -webkit-flex: initial
}

.i {
  vertical-align: middle
}

.j {
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif
}

.k {
  font-size: 0.86667rem
}

.l {
  background: #fff
}

.m {
  color: #333333
}

.n {
  outline: none
}

.o {
  transition: border-color 0.2s ease;
  -webkit-transition: border-color 0.2s ease;
  -moz-transition: border-color 0.2s ease
}

.p {
  text-indent: initial
}

.q:hover {
  border-color: #2F7BBF
}

.r:focus {
  border-color: #2F7BBF
}
"
`;

exports[`should render with error 1`] = `
<input
  autoComplete={undefined}
  className="a b c d e f g h i j k l m n o p q r"
  defaultValue={undefined}
  disabled={undefined}
  name="example"
  onBlur={undefined}
  onChange={[Function]}
  onFocus={undefined}
  onKeyDown={undefined}
  placeholder={undefined}
  type="text"
  value=""
/>
`;

exports[`should render with error 2`] = `
"
.a {
  z-index: 0
}

.b {
  width: 100%
}

.c {
  height: 2.26667rem
}

.d {
  margin: 0 0 0.75rem
}

.e {
  padding: 0.45em 0.75em
}

.f {
  border: 1px solid #BCBEC0
}

.g {
  border-radius: 2px
}

.h {
  flex: initial;
  -webkit-flex: initial
}

.i {
  vertical-align: middle
}

.j {
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif
}

.k {
  font-size: 0.86667rem
}

.l {
  background: #fff
}

.m {
  color: #333333
}

.n {
  outline: none
}

.o {
  transition: border-color 0.2s ease;
  -webkit-transition: border-color 0.2s ease;
  -moz-transition: border-color 0.2s ease
}

.p {
  text-indent: initial
}

.q:hover {
  border-color: #2F7BBF
}

.r:focus {
  border-color: #2F7BBF
}
"
`;

exports[`should render with placeholder 1`] = `
<input
  autoComplete={undefined}
  className="a b c d e f g h i j k l m n o p q r"
  defaultValue={undefined}
  disabled={undefined}
  name="example"
  onBlur={undefined}
  onChange={[Function]}
  onFocus={undefined}
  onKeyDown={undefined}
  placeholder="placeholder"
  type="text"
  value=""
/>
`;

exports[`should render with placeholder 2`] = `
"
.a {
  z-index: 0
}

.b {
  width: 100%
}

.c {
  height: 2.26667rem
}

.d {
  margin: 0 0 0.75rem
}

.e {
  padding: 0.45em 0.75em
}

.f {
  border: 1px solid #BCBEC0
}

.g {
  border-radius: 2px
}

.h {
  flex: initial;
  -webkit-flex: initial
}

.i {
  vertical-align: middle
}

.j {
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif
}

.k {
  font-size: 0.86667rem
}

.l {
  background: #fff
}

.m {
  color: #333333
}

.n {
  outline: none
}

.o {
  transition: border-color 0.2s ease;
  -webkit-transition: border-color 0.2s ease;
  -moz-transition: border-color 0.2s ease
}

.p {
  text-indent: initial
}

.q:hover {
  border-color: #2F7BBF
}

.r:focus {
  border-color: #2F7BBF
}
"
`;

exports[`should render with type 1`] = `
<input
  autoComplete={undefined}
  className="a b c d e f g h i j k l m n o p q r"
  defaultValue={undefined}
  disabled={undefined}
  name="example"
  onBlur={undefined}
  onChange={[Function]}
  onFocus={undefined}
  onKeyDown={undefined}
  placeholder={undefined}
  type="search"
  value="content"
/>
`;

exports[`should render with type 2`] = `
"
.a {
  z-index: 0
}

.b {
  width: 100%
}

.c {
  height: 2.26667rem
}

.d {
  margin: 0 0 0.75rem
}

.e {
  padding: 0.45em 0.75em
}

.f {
  border: 1px solid #BCBEC0
}

.g {
  border-radius: 2px
}

.h {
  flex: initial;
  -webkit-flex: initial
}

.i {
  vertical-align: middle
}

.j {
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif
}

.k {
  font-size: 0.86667rem
}

.l {
  background: #fff
}

.m {
  color: #333333
}

.n {
  outline: none
}

.o {
  transition: border-color 0.2s ease;
  -webkit-transition: border-color 0.2s ease;
  -moz-transition: border-color 0.2s ease
}

.p {
  text-indent: initial
}

.q:hover {
  border-color: #2F7BBF
}

.r:focus {
  border-color: #2F7BBF
}
"
`;
